Simply CIDR calculation, thanks to Francois-Xavier Le Bail.
Don't free the dhcp object on RENEW (fixes a segfault).

dhcpcd-3.1.1
Fix segfault in arp code that some users had.
Remove getifaddrs code and instead just use ioctls so we don't break
platforms without getifaddrs as often.

dhcpcd-3.1.0
Add new socket code to try and support InfiniBand better.
Support RFC 3361 SIP Servers.
We now do ARP checking by default as recommended by RFC 2131.
Add RFC 3927 (aka IPV4LL aka APIPA) support by default.
Suport DHCP option (52) overload.
Added -T test option. This just sends a DHCP_DISCOVER message and then
prints the configuration data to stdout - we don't request a lease,
configure the interface or write the info file.
Fix adding of routes on the BSDs.
ROOTPATH should work correctly again, thanks to danhien.
We now have 6 hostname options, which should satisfy everyone.
Fix arp compilation warning on GCC-4.2.0.
Enable DHCP_INFORM support via the -s option again, moving DHCP_REQUEST
to the -r option. This makes us more compatible with dhcpcd-1.x and 2.x.
Ensure that dhcpcd.sh is always called.
flock the pidfile and stop writing the parent pid to it so we're more robst.
Use the DUID stored to create an RFC 4361 conformant client identifier
if none is specified instead of just using the MAC address.
Create a DUID-LLT according to RFC 3315 and store it in peristent file.
config.h now has the compile time options, instead of being dotted around.
Added -E option, which reads the last info file and uses the information there
if we timeout and the lease is still valid, thanks to Roberto Angelino.
Compiles ok on NetBSD thanks to Gabor Z. Papp.
If the current hostname contains dots then send it as a FQDN.
Ensure that static routes are always added before routers.
Use getnameinfo instead of gethostbyaddr.
Remove gateways from the ROUTES and add to GATEWAYS
define #INFO_COMPAT if you wish your .info file to add support for some
old 1.x and 2.x structure.

dhcpcd-3.0.17